# orderbook-pallets

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile  metadata.scale
frontend/: Dockerfile  ENV_FIX.md  INDEXER_INTEGRATION.md  INTEGRATION_SUMMARY.md  QUICKSTART.md  README.docker.md  START_HERE.md  UPDATED_QUICKSTART.md  docker-compose.yml  instrumentation.ts  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/test-indexer/: page.tsx
frontend/components/: account-tabs.tsx  indexer-chart.tsx  market-stats.tsx  order-book.tsx  providers.tsx  trading-dashboard-with-indexer.tsx  trading-dashboard.tsx  trading-form.tsx  trading-view-chart-custom.tsx  trading-view-chart.tsx  wallet-connect.tsx
frontend/components/ui/: depositwithdraw.tsx
frontend/hooks/: polkadot-hooks.ts  use-balances.ts  use-indexer-orderbook.ts  use-market-stats.ts  use-open-orders.ts  use-order-book.ts  use-positions.ts  use-simulated-candles.ts  use-trades.ts
frontend/lib/: env.ts  wagmi-config.ts
frontend/lib/indexer/: index.ts  rest-client.ts  tradingview-datafeed.ts  types.ts  websocket-client.ts
frontend/lib/polkadot/: client.ts  transactions.ts
indexer/: .env  Cargo.toml  Dockerfile
indexer/db/: timescale.sql
indexer/db/migrations/: 001_create_trades.sql
indexer/db/src/: mod.rs
indexer/src/: db.rs  env.rs  event_collector.rs  lib.rs  main.rs  orderbook_reducer.rs  trade_mapper.rs
indexer/src/api/: README.md  mod.rs  server.rs
indexer/src/api/handlers/: mod.rs  ohlcv_hand.rs  orderbook_hand.rs  trades_hand.rs  udf.rs
indexer/src/api/websocket/: messages.rs  mod.rs  ws_orderbook.rs  ws_unified.rs
indexer/src/db/: mod.rs
indexer/src/indexer/: candle_aggregator.rs  event_collector.rs  event_type_ref.txt  mod.rs  order_extractor.rs  orderbook_reducer.rs  runtime.rs  trade_mapper.rs
indexer/src/server/: http_client.rs  mod.rs  routes.rs  ws.rs
pallets/assets/: Cargo.toml
pallets/assets/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/orderbook/: Cargo.toml
pallets/orderbook/src/: benchmarking.rs  engine.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
tradebot/: .env.example  Cargo.toml  Dockerfile  ETHUSDC_2025-11-12T22-08-37-339Z_synthetic_blocks.jsonl  README.md
tradebot/src/: main.rs
