[package]
name = "indexer"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
# runtime
tokio = { version = "1", features = ["full"] }

# server + io glue
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
bytes = "1"

# websockets
fastwebsockets = { version = "0.9", features = ["upgrade"] }

# outbound HTTP (pure rustls for egress)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# config / db / errors / utils
postgres = "0.19"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
url = "2.5"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
