[package]
name = "orderbook-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Substrate interaction
subxt = "0.35"
subxt-signer = "0.35"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "migrate"] }
deadpool-postgres = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenv = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# Metrics (optional)
# prometheus = "0.13"

[dev-dependencies]
tokio-test = "0.4"